Move types around for new interface.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -45,10 +45,10 @@ libprinterddaemon_la_SOURCES =					\
 	pd-engine.c						\
 	pd-manager-impl.h					\
 	pd-manager-impl.c					\
+	pd-device-impl.h					\
+	pd-device-impl.c					\
 	pd-printer-impl.h					\
 	pd-printer-impl.c					\
-	pd-queue-impl.h						\
-	pd-queue-impl.c						\
 	$(BUILT_SOURCES)
 
 libprinterddaemon_la_CFLAGS =					\
