--- a/data/org.freedesktop.printerd.policy.in
+++ b/data/org.freedesktop.printerd.policy.in
@@ -9,13 +9,23 @@
   <vendor_url>http://printerd.freedesktop.org/</vendor_url>
   <icon_name>printer</icon_name>
 
-  <!-- Mounting filesystems -->
-  <action id="org.freedesktop.printerd.device-add">
+  <!-- Operations on printers -->
+  <action id="org.freedesktop.printerd.printer-add">
     <_description>Add a printer</_description>
     <_message>Authentication is required to add a printer</_message>
     <defaults>
       <allow_any>auth_admin</allow_any>
       <allow_inactive>auth_admin</allow_inactive>
+      <allow_active>yes</allow_active>
+    </defaults>
+  </action>
+
+  <action id="org.freedesktop.printerd.job-add">
+    <_description>Add a job</_description>
+    <_message>Authentication is required to add a job</_message>
+    <defaults>
+      <allow_any>yes</allow_any>
+      <allow_inactive>yes</allow_inactive>
       <allow_active>yes</allow_active>
     </defaults>
   </action>
