--- a/data/printerd.service.in
+++ b/data/printerd.service.in
@@ -4,4 +4,4 @@ Description=Printer Daemon
 [Service]
 Type=dbus
 BusName=org.freedesktop.printerd
-ExecStart=@privlibdir@/printerd
+ExecStart=@libexecdir@/printerd
