--- a/data/org.freedesktop.printerd.policy.in
+++ b/data/org.freedesktop.printerd.policy.in
@@ -30,4 +30,14 @@
     </defaults>
   </action>
 
+  <action id="org.freedesktop.printerd.job-cancel">
+    <_description>Cancel a job</_description>
+    <_message>Authentication is required to cancel a job</_message>
+    <defaults>
+      <allow_any>yes</allow_any>
+      <allow_inactive>yes</allow_inactive>
+      <allow_active>yes</allow_active>
+    </defaults>
+  </action>
+
 </policyconfig>
