--- a/configure.ac
+++ b/configure.ac
@@ -72,6 +72,7 @@ GETTEXT_PACKAGE=printerd
 AC_SUBST([GETTEXT_PACKAGE])
 AM_GLIB_GNU_GETTEXT
 AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE],["$GETTEXT_PACKAGE"],[gettext domain])
+ALL_LINGUAS="en_GB id"
 
 # Generate
 #
