--- a/configure.ac
+++ b/configure.ac
@@ -7,6 +7,7 @@ AC_CONFIG_HEADERS([config.h])
 
 AM_MAINTAINER_MODE
 
+AX_CHECK_ENABLE_DEBUG
 AC_PROG_CC
 AC_ISC_POSIX
 AC_HEADER_STDC
@@ -18,7 +19,6 @@ m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 #
 
 GNOME_COMMON_INIT
-GNOME_DEBUG_CHECK
 GNOME_COMPILE_WARNINGS([maximum])
 GNOME_MAINTAINER_MODE_DEFINES
 
