--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: c
 compiler: gcc
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq gnome-common libglib2.0-dev gobject-introspection gtk-doc-tools libgudev-1.0-dev
+  - sudo apt-get install -qq gnome-common libglib2.0-dev gobject-introspection gtk-doc-tools libgudev-1.0-dev libpolkit-gobject-1-dev
 script: ./autogen.sh && ./configure && make
