--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,7 @@ language: c
 compiler: gcc
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq gnome-common libglib2.0-dev gobject-introspection gtk-doc-tools libgudev-1.0-dev libpolkit-gobject-1-dev libpolkit-agent-1-dev
-script: ./autogen.sh && make distcheck
+  - sudo apt-get install -qq gnome-common libglib2.0-dev gobject-introspection gtk-doc-tools libgudev-1.0-dev libpolkit-gobject-1-dev libpolkit-agent-1-dev dbus
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+script: ./autogen.sh && DISPLAY=:99.0 make distcheck
