--- a/data/org.freedesktop.printerd.policy.in
+++ b/data/org.freedesktop.printerd.policy.in
@@ -20,6 +20,16 @@
     </defaults>
   </action>
 
+  <action id="org.freedesktop.printerd.printer-modify">
+    <_description>Modify a printer</_description>
+    <_message>Authentication is required to modify a printer</_message>
+    <defaults>
+      <allow_any>auth_admin</allow_any>
+      <allow_inactive>auth_admin</allow_inactive>
+      <allow_active>yes</allow_active>
+    </defaults>
+  </action>
+
   <action id="org.freedesktop.printerd.job-add">
     <_description>Add a job</_description>
     <_message>Authentication is required to add a job</_message>
