--- a/Makefile.am
+++ b/Makefile.am
@@ -8,6 +8,37 @@ SUBDIRS = 						\
 	tools						\
 	po
 
+# Regression tests
+TEST_BOOKMARK=$(top_builddir)/printerd-session.lines-before-test
+TEST_SESSION_LOG=$(top_builddir)/printerd-session.log
+TESTS_ENVIRONMENT = \
+	$(MAKE) -s printerd-session.pid; \
+	top_srcdir=$(top_srcdir) \
+	top_builddir=$(top_builddir) \
+	BOOKMARK=$(TEST_BOOKMARK) \
+	SESSION_LOG=$(TEST_SESSION_LOG)
+
+# A rule to start printerd on a session bus of its own
+printerd-session.pid:
+	bash $(top_srcdir)/tests/start-session-service.sh
+
+# A rule to make the test scripts executable
+tests/started/run-test:
+	for test in $(TESTS); do \
+		chmod a+x $(top_srcdir)/$$test; \
+	done
+
+TESTS = \
+	tests/started/run-test \
+	tests/version/run-test \
+	tests/stop-session-service/run-test
+
+DISTCLEANFILES = \
+	$(TEST_SESSION_LOG) \
+	$(TEST_BOOKMARK) \
+	printerd-session.pid \
+	printerd-session.bus
+
 MAINTAINERCLEANFILES =					\
 	$(srcdir)/INSTALL				\
 	$(srcdir)/ABOUT-NLS				\
@@ -56,5 +87,9 @@ ChangeLog:
 	fi
 
 .PHONY: ChangeLog
+
+EXTRA_DIST = \
+	tests/common.sh tests/start-session-service.sh \
+	$(TESTS) $(XFAIL_TESTS)
 
 -include $(top_srcdir)/git.mk
