New test case: createprinter3.
This creates a printer and inspects its properties.

Currently expected to fail.

--- a/Makefile.am
+++ b/Makefile.am
@@ -33,9 +33,11 @@ TESTS = \
 	tests/version/run-test \
 	tests/createprinter1/run-test \
 	tests/createprinter2/run-test \
+	tests/createprinter3/run-test \
 	tests/stop-session-service/run-test
 
-XFAIL_TESTS =
+XFAIL_TESTS = \
+	tests/createprinter3/run-test
 
 DISTCLEANFILES = \
 	$(TEST_SESSION_LOG) \
