New test case: createprinter4.
This tests Manager.GetPrinters().

--- a/Makefile.am
+++ b/Makefile.am
@@ -33,6 +33,7 @@ TESTS = \
 	tests/version/run-test \
 	tests/createprinter1/run-test \
 	tests/createprinter2/run-test \
+	tests/createprinter4/run-test \
 	tests/createprinter3/run-test \
 	tests/stop-session-service/run-test
 
