--- a/Makefile.am
+++ b/Makefile.am
@@ -36,6 +36,7 @@ TESTS = \
 	tests/createprinter4/run-test \
 	tests/createprinter3/run-test \
 	tests/job1/run-test \
+	tests/job2/run-test \
 	tests/stop-session-service/run-test
 
 XFAIL_TESTS = \
