New test case: job3.
This sends a job through the file backend with a delay of 1s.

The point of this test is to make sure the filter pipeline is set up
and run correctly.

--- a/Makefile.am
+++ b/Makefile.am
@@ -37,6 +37,7 @@ TESTS = \
 	tests/createprinter3/run-test \
 	tests/job1/run-test \
 	tests/job2/run-test \
+	tests/job3/run-test \
 	tests/stop-session-service/run-test
 
 XFAIL_TESTS = \
