New test case: createprinter5.
Set and examine the Driver property.

--- a/Makefile.am
+++ b/Makefile.am
@@ -35,13 +35,15 @@ TESTS = \
 	tests/createprinter2/run-test \
 	tests/createprinter4/run-test \
 	tests/createprinter3/run-test \
+	tests/createprinter5/run-test \
 	tests/job1/run-test \
 	tests/job2/run-test \
 	tests/job3/run-test \
 	tests/stop-session-service/run-test
 
 XFAIL_TESTS = \
-	tests/createprinter3/run-test
+	tests/createprinter3/run-test \
+	tests/createprinter5/run-test
 
 DISTCLEANFILES = \
 	$(TEST_SESSION_LOG) \
