--- a/Makefile.am
+++ b/Makefile.am
@@ -36,13 +36,15 @@ TESTS = \
 	tests/createprinter4/run-test \
 	tests/createprinter3/run-test \
 	tests/createprinter5/run-test \
+	tests/updatedriver1/run-test \
 	tests/job1/run-test \
 	tests/job2/run-test \
 	tests/job3/run-test \
 	tests/stop-session-service/run-test
 
 XFAIL_TESTS = \
-	tests/createprinter3/run-test
+	tests/createprinter3/run-test \
+	tests/updatedriver1/run-test
 
 DISTCLEANFILES = \
 	$(TEST_SESSION_LOG) \
