Fixed 'make -j4 check' by putting in test dependencies.
Also needed to make job3 test-case use its own printer name.

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,7 +12,6 @@ SUBDIRS = 						\
 TEST_BOOKMARK=$(top_builddir)/printerd-session.lines-before-test
 TEST_SESSION_LOG=$(top_builddir)/printerd-session.log
 TESTS_ENVIRONMENT = \
-	$(MAKE) -s printerd-session.pid; \
 	top_srcdir=$(top_srcdir) \
 	top_builddir=$(top_builddir) \
 	BOOKMARK=$(TEST_BOOKMARK) \
@@ -28,23 +27,46 @@ tests/started/run-test:
 		chmod a+x $(top_srcdir)/$$test; \
 	done
 
-TESTS = \
-	tests/started/run-test \
-	tests/version/run-test \
+# Here's where most of the tests go.
+AFTER_GETPRINTERS_TESTS = \
 	tests/createprinter1/run-test \
 	tests/createprinter2/run-test \
-	tests/createprinter4/run-test \
 	tests/createprinter3/run-test \
 	tests/createprinter5/run-test \
 	tests/updatedriver1/run-test \
 	tests/job1/run-test \
 	tests/job2/run-test \
 	tests/job3/run-test \
-	tests/job4/run-test \
+	tests/job4/run-test
+
+# Some tests have to run at the beginning.
+ALL_TESTS = \
+	tests/started/run-test \
+	tests/version/run-test \
+	tests/Manager.GetPrinters/run-test \
+	$(AFTER_GETPRINTERS_TESTS)
+
+# One test has to run at the end.
+STOP_TESTS = \
 	tests/stop-session-service/run-test
 
+TESTS = \
+	$(ALL_TESTS) \
+	$(STOP_TESTS)
+
+# Some tests are known to fail at the moment.
 XFAIL_TESTS = \
 	tests/createprinter3/run-test
+
+# Start the session daemon before running the tests
+$(TESTS:run-test=run-test.log): printerd-session.pid
+
+# Make sure Mananger.GetPrinters is tested before other failed tests
+# can leave printers lying around.
+$(AFTER_GETPRINTERS_TESTS:run-test=run-test.log): tests/Manager.GetPrinters/run-test.log
+
+# Don't run the stop-session-service test until all others have finished.
+$(STOP_TESTS:run-test=run-test.log): $(ALL_TESTS:run-test=run-test.log)
 
 DISTCLEANFILES = \
 	$(TEST_SESSION_LOG) \
