--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq gnome-common libglib2.0-dev gobject-introspection
     gtk-doc-tools libgudev-1.0-dev libpolkit-gobject-1-dev
-    libpolkit-agent-1-dev dbus cups-filters
+    libpolkit-agent-1-dev dbus cups-filters libcups2-dev
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
 script: ./autogen.sh --disable-systemd &&
